horizontal scrolling avoided

--- a/style.css
+++ b/style.css
@@ -161,9 +161,14 @@ latest courses
 /* media queries */
 
 @media only screen and (max-width:688px) {
+    body, html{
+       overflow-x: hidden;
+       
+    }
     nav{
         width:100%;
         height:100px;
+      
     }
     .players, .blogs, .courses{
        /* justify-content: center;
@@ -174,6 +179,9 @@ latest courses
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    hr{
+        width:90%
     }
     .blog img{
         width: 100%;
@@ -189,9 +197,8 @@ latest courses
     .course-info{
         flex-direction: column;
     }
-    
+}
+@media only screen and (min-width:688px) and (max-width:992px){
 
-
-    
 }
 
